# EAG

./: README.md
Assignment2/: ai-integration.js  background.js  chatbot-ui.js  content-extractor.js  context-chatbot.js  context-processor.js  manifest.json  options.html  options.js
Assignment3/: .env  README.md  requirements.txt  server.py  server_manager.py  test_server.py
Assignment3/PromptPilot/: .gitignore  README.md  manifest.json  popup.html  popup.js  service-worker.js
Assignment4/: README.md  example2-3.py  pyproject.toml  server.py  talk2mcp-2.py
